--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Chamber</a></li>
-            <li><a href="#">GitHub Profile</a></li>
-            <li><a href="#">LinkedIn</a></li>
+            <li><a href="https://github.com/Obinnaojukwu">GitHub Profile</a></li>
+            <li><a href="https://www.linkedin.com/login">LinkedIn</a></li>
         </ul>
     </nav>
 
