--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,18 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to the Chamber of Commerce, supporting local businesses and fostering economic growth.">
+    <meta name="description" content="Welcome to the Chamber of Commerce. Find business listings, join the chamber, and stay updated with events and weather.">
     <meta name="author" content="Your Name">
-    
 
-    <meta property="og:title" content="Chamber of Commerce">
+    <meta property="og:title" content="Chamber of Commerce Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/preview.jpg">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:image" content="https://yourwebsite.com/images/og-image.jpg">
+    <meta property="og:url" content="https://yourwebsite.com/index.html">
 
-    <title>Chamber of Commerce</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <title>Home | Chamber of Commerce</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <script defer src="js/script.js"></script>
+    <style>
+
+        #hero img {
+            width: 100%;
+            max-height: 400px;
+            object-fit: cover;
+        }
+
+
+        #weather-info {
+            text-align: center;
+            font-size: 1.2em;
+        }
+
+
+        .spotlight-card {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin: 10px;
+            text-align: center;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .spotlight-card img {
+            max-width: 100px;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -30,15 +58,107 @@
     </header>
 
     <main>
-        <h2>Welcome to Our Chamber</h2>
-        <p>Supporting businesses and fostering economic growth in our community.</p>
+
+        <section id="hero">
+            <img src="images/c2.jpg" alt="Chamber of Commerce Hero Image">
+            <div class="hero-text">
+                <h2>Welcome to the Chamber of Commerce</h2>
+                <p>Your gateway to local businesses and opportunities.</p>
+                <a href="join.html" class="cta-button">Join the Chamber</a>
+            </div>
+        </section>
+
+        <section id="current-events">
+            <h2>Current Events</h2>
+            <ul>
+                <li>Event 1: Chamber Business Networking - March 25, 2025</li>
+                <li>Event 2: Annual Chamber Gala - April 15, 2025</li>
+                <li>Event 3: Local Business Expo - May 5, 2025</li>
+            </ul>
+        </section>
+
+        <section id="weather">
+            <h2>Local Weather</h2>
+            <div id="weather-info">
+                <p>Loading weather...</p>
+            </div>
+        </section>
+
+        <section id="spotlights">
+            <h2>Business Spotlights</h2>
+            <div id="spotlights-container"></div>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> Chamber of Commerce | WDD 231</p>
-        <p>Last Updated: <span id="lastModified"></span></p>
+        <p>&copy; <span id="year"></span> Chamber of Commerce</p>
+        <p>Last Updated: <span id="last-modified"></span></p>
     </footer>
 
-    <script src="js/directory.js"></script>
+    <script>
+
+        document.getElementById("year").textContent = new Date().getFullYear();
+        document.getElementById("last-modified").textContent = document.lastModified;
+
+        const weatherContainer = document.getElementById("weather-info");
+
+        async function getWeather() {
+            try {
+                const apiKey = 'a4b003d468ae19f93407aaa496fc105b';
+                const city = 'Lagos'; 
+                const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${apiKey}`);
+                const data = await response.json();
+
+                console.log(data);
+
+                if (!response.ok || data.cod !== 200) {
+                    throw new Error(`Weather fetch failed: ${data.message}`);
+                }
+
+                const weatherDescription = data.weather[0].description.toUpperCase();
+                const temperature = data.main.temp.toFixed(0);
+
+                weatherContainer.innerHTML = `
+                    <p><strong>Temperature:</strong> ${temperature}°C</p>
+                    <p><strong>Description:</strong> ${weatherDescription}</p>
+                `;
+            } catch (error) {
+                console.error("Error fetching weather:", error);
+                weatherContainer.innerHTML = `<p>Unable to load weather. Try again later.</p>`;
+            }
+        }
+
+        getWeather();
+
+        async function loadSpotlights() {
+            try {
+                const response = await fetch('data/members.json');
+                if (!response.ok) throw new Error('Failed to load members.json');
+
+                const members = await response.json();
+                const spotlightMembers = members.filter(member => member.membershipLevel >= 2);
+                const randomSpotlights = spotlightMembers.sort(() => 0.5 - Math.random()).slice(0, 3);
+
+                const spotlightsContainer = document.getElementById('spotlights-container');
+                spotlightsContainer.innerHTML = randomSpotlights.map(member => `
+                    <div class="spotlight-card">
+                        <img src="images/${member.logo}" alt="${member.companyName} logo">
+                        <h3>${member.companyName}</h3>
+                        <p>${member.phone}</p>
+                        <p>${member.address}</p>
+                        <p><a href="${member.website}" target="_blank">Visit Website</a></p>
+                        <p>Membership: ${['Member', 'Silver', 'Gold'][member.membershipLevel - 1]}</p>
+                    </div>
+                `).join('');
+            } catch (error) {
+                console.error("Error loading spotlights:", error);
+                document.getElementById('spotlights-container').innerHTML = `<p>Unable to load spotlights.</p>`;
+            }
+        }
+        
+        loadSpotlights();
+    </script>
 </body>
 </html>
+
+
