--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,7 +60,7 @@
     <main>
 
         <section id="hero">
-            <img src="images/c2.jpg" alt="Chamber of Commerce Hero Image">
+            <img src="images/c8.webp" alt="Chamber of Commerce Hero Image">
             <div class="hero-text">
                 <h2>Welcome to the Chamber of Commerce</h2>
                 <p>Your gateway to local businesses and opportunities.</p>
