--- a/site-plan.html
+++ b/site-plan.html
@@ -5,24 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Creative Studio Portfolio - Site Plan</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Open Sans', sans-serif;
-      margin: 2rem;
-      background-color: #fff8f5;
-      color: #2e2e2e;
-    }
-    h1, h2 {
-      font-family: 'Playfair Display', serif;
-      color: #b30059;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    strong {
-      color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/site-plan.css">
 </head>
 <body>
 
@@ -32,7 +15,6 @@
     <h2>Site Name</h2>
     <p><strong>Site Name:</strong> studio portfolio</p>
     <p>This name reflects elegance and creativity, inspired by timeless artistry. It positions the studio as a boutique brand offering premium photography and videography services.</p>
-  
   </section>
 
   <section>
@@ -67,7 +49,7 @@
   <section>
     <h2>Wireframes ?</h2>
     <p><strong>sorry, cant sketch</strong></p>
-
+  </section>
 
 </body>
 </html>
